Update blenderapp .yml

--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -1,4 +1,4 @@
-name: Build Blender Android APK
+name: Build Blender Android APK (Debug)
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  debug-build:
     runs-on: ubuntu-22.04
 
     env:
@@ -16,70 +16,62 @@ jobs:
       PYTHON_VERSION: "3.11"
 
     steps:
-    - name: Checkout this repo
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Clone Blender repo recursively
-      run: |
-        git clone --recursive https://projects.blender.org/blender/blender.git
+      - name: Clone Blender
+        run: git clone --recursive https://projects.blender.org/blender/blender.git
 
-    - name: Install Linux Tools
-      run: |
-        sudo apt update
-        sudo apt install -y cmake git wget unzip ninja-build yasm \
-          build-essential libxi-dev libxcursor-dev libxrandr-dev \
-          libxinerama-dev libglu1-mesa-dev libglew-dev libopenal-dev \
-          libssl-dev libpulse-dev libxcursor-dev libxrender-dev
+      - name: Install Linux Tools
+        run: |
+          sudo apt update
+          sudo apt install -y cmake git wget unzip ninja-build yasm \
+            build-essential libxi-dev libxcursor-dev libxrandr-dev \
+            libxinerama-dev libglu1-mesa-dev libglew-dev libopenal-dev \
+            libssl-dev libpulse-dev libxcursor-dev libxrender-dev
 
-    - name: Setup Android SDK + NDK
-      run: |
-        set -ex
-        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-        cd $ANDROID_SDK_ROOT
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O tools.zip
-        unzip tools.zip -d cmdline-tools
-        mv cmdline-tools/cmdline-tools cmdline-tools/latest
+      - name: Setup Android SDK & NDK
+        run: |
+          set -ex
+          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+          cd $ANDROID_SDK_ROOT
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O tools.zip
+          unzip tools.zip -d cmdline-tools
+          mv cmdline-tools/cmdline-tools cmdline-tools/latest
+          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+          sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
+            "platform-tools" \
+            "platforms;android-${ANDROID_API_LEVEL}" \
+            "build-tools;30.0.3" \
+            "ndk;${ANDROID_NDK_VERSION}"
 
-        export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
+      - name: Export SDK vars
+        run: |
+          echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION}" >> $GITHUB_ENV
+          echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
 
-        yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-        sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
-          "platform-tools" \
-          "platforms;android-${ANDROID_API_LEVEL}" \
-          "build-tools;30.0.3" \
-          "ndk;${ANDROID_NDK_VERSION}"
+      - name: Confirm SDK & NDK
+        run: |
+          sdkmanager --version
+          ls -R $ANDROID_SDK_ROOT
+          ls $ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION}
 
-    - name: Debug SDK Installation
-      run: |
-        echo "SDK Root Path Contents:"
-        ls -R $ANDROID_SDK_ROOT
-        echo "NDK Directory Listing:"
-        ls -l $ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION}
+      - name: Build with verbose logging
+        run: |
+          set -ex
+          cd blender
+          python3 ./build_files/utils/make_project.py \
+            --android \
+            --arch arm64-v8a \
+            --sdk-dir "$ANDROID_SDK_ROOT" \
+            --ndk-dir "$ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION}" \
+            --verbose
 
-    - name: Export Android Variables
-      run: |
-        echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
-        echo "ANDROID_NDK_HOME=$ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION}" >> $GITHUB_ENV
-        echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
-
-    - name: Confirm SDK/NDK Setup
-      run: |
-        echo "sdkmanager version: $(sdkmanager --version)"
-        echo "ndk build dir exists?:"
-        [ -d "$ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION}" ]
-
-    - name: Build Blender Android APK
-      run: |
-        cd blender
-        python3 ./build_files/utils/make_project.py \
-          --android \
-          --arch arm64-v8a \
-          --sdk-dir $ANDROID_SDK_ROOT \
-          --ndk-dir $ANDROID_SDK_ROOT/ndk/${ANDROID_NDK_VERSION} \
-          --verbose
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: blender-android-apk
-        path: blender/build_android_arm64_v8a/install/blender.apk
+      - name: Upload APK
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: blender-android-apk
+          path: blender/build_android_arm64_v8a/install/blender.apk
