--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -13,8 +13,11 @@ jobs:
       ANDROID_API_LEVEL: "30"
 
     steps:
-    - name: 🧾 Clone Blender Source
+    - name: 🧾 Install Git LFS and Clone Blender Source
       run: |
+        sudo apt update
+        sudo apt install -y git-lfs
+        git lfs install
         git clone --depth=1 --recursive https://github.com/blender/blender.git
         cd blender
         git submodule update --init --recursive
