--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -1,60 +1,66 @@
-name: Blender Android Build
+name: Build Blender 3.6 LTS for Android (Modeling Only)
 
 on:
   workflow_dispatch:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
   build:
-    name: Build Blender for Android (arm64-v8a)
     runs-on: ubuntu-latest
-
-    env:
-      ANDROID_NDK_VERSION: r25c
-      BLENDER_BRANCH: main
-
+    name: Build Blender APK (Modeling Only)
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Set up Git
-      run: |
-        git config --global advice.detachedHead false
+      - name: Install Dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y ninja-build cmake git wget unzip \
+            libxi-dev libsdl2-dev libfreetype6-dev libx11-dev \
+            libopenal-dev build-essential
 
-    - name: Checkout Blender source
-      uses: actions/checkout@v3
-      with:
-        repository: blender/blender
-        ref: ${{ env.BLENDER_BRANCH }}
-        submodules: true
-        path: blender-source
+      - name: Download Android NDK r25c
+        run: |
+          wget https://dl.google.com/android/repository/android-ndk-r25c-linux.zip
+          unzip android-ndk-r25c-linux.zip
+          mv android-ndk-r25c $HOME/android-ndk
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y git cmake ninja-build gcc g++ python3-pip unzip wget openjdk-11-jdk
-        python3 -m pip install --upgrade pip setuptools
+      - name: Configure Blender (Modeling Only)
+        run: |
+          mkdir build && cd build
+          cmake ../ \
+            -G Ninja \
+            -DCMAKE_TOOLCHAIN_FILE=$HOME/android-ndk/build/cmake/android.toolchain.cmake \
+            -DANDROID_ABI=arm64-v8a \
+            -DANDROID_PLATFORM=android-24 \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DWITH_PYTHON_INSTALL=OFF \
+            -DWITH_PYTHON_MODULE=OFF \
+            -DWITH_PLAYER=OFF \
+            -DWITH_CYCLES=ON \
+            -DWITH_EEVEE=ON \
+            -DWITH_MODIFIER=ON \
+            -DWITH_GEOMETRY_NODES=ON \
+            -DWITH_IMAGE_EDITOR=ON \
+            -DWITH_UV=ON \
+            -DWITH_SCULPT=OFF \
+            -DWITH_SIMULATION=OFF \
+            -DWITH_COMPOSITOR=OFF \
+            -DWITH_VSE=OFF \
+            -DWITH_GHOST_SDL=ON \
+            -DWITH_GHOST_X11=OFF \
+            -DWITH_GHOST_WAYLAND=OFF \
+            -DWITH_HEADLESS=OFF
 
-    - name: Install Android NDK
-      uses: nttld/setup-ndk@v1
-      with:
-        ndk-version: ${{ env.ANDROID_NDK_VERSION }}
-        add-to-path: true
+      - name: Build Blender
+        run: cd build && ninja
 
-    - name: Clone & update all submodules
-      run: |
-        cd blender-source
-        make update
-        git submodule update --init --recursive
+      - name: Package Blender APK
+        run: cd build && zip -r blender-modeling.apk.zip bin/
 
-    - name: Build Blender for Android (arm64)
-      run: |
-        cd blender-source
-        make android_arm64_release -j$(nproc)
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: blender-android-arm64
-        path: blender-source/build_android_arm64_release/bin/*.apk
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: blender-modeling-apk
+          path: build/blender-modeling.apk.zip
