--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -34,28 +34,29 @@ jobs:
         run: |
           mkdir build && cd build
           cmake ../ \
-            -G Ninja \
-            -DCMAKE_TOOLCHAIN_FILE=$HOME/android-ndk/build/cmake/android.toolchain.cmake \
-            -DANDROID_ABI=arm64-v8a \
-            -DANDROID_PLATFORM=android-24 \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DWITH_PYTHON_INSTALL=OFF \
-            -DWITH_PYTHON_MODULE=OFF \
-            -DWITH_PLAYER=OFF \
-            -DWITH_CYCLES=ON \
-            -DWITH_EEVEE=ON \
-            -DWITH_MODIFIER=ON \
-            -DWITH_GEOMETRY_NODES=ON \
-            -DWITH_IMAGE_EDITOR=ON \
-            -DWITH_UV=ON \
-            -DWITH_SCULPT=OFF \
-            -DWITH_SIMULATION=OFF \
-            -DWITH_COMPOSITOR=OFF \
-            -DWITH_VSE=OFF \
-            -DWITH_GHOST_SDL=ON \
-            -DWITH_GHOST_X11=OFF \
-            -DWITH_GHOST_WAYLAND=OFF \
-            -DWITH_HEADLESS=OFF
+  -G Ninja \
+  -DCMAKE_TOOLCHAIN_FILE=$HOME/android-ndk/build/cmake/android.toolchain.cmake \
+  -DANDROID_ABI=arm64-v8a \
+  -DANDROID_PLATFORM=android-24 \
+  -DCMAKE_BUILD_TYPE=Release \
+  -DWITH_SDL=ON \
+  -DWITH_PYTHON_INSTALL=OFF \
+  -DWITH_PYTHON_MODULE=OFF \
+  -DWITH_PLAYER=OFF \
+  -DWITH_CYCLES=ON \
+  -DWITH_EEVEE=ON \
+  -DWITH_MODIFIER=ON \
+  -DWITH_GEOMETRY_NODES=ON \
+  -DWITH_IMAGE_EDITOR=ON \
+  -DWITH_UV=ON \
+  -DWITH_SCULPT=OFF \
+  -DWITH_SIMULATION=OFF \
+  -DWITH_COMPOSITOR=OFF \
+  -DWITH_VSE=OFF \
+  -DWITH_GHOST_SDL=ON \
+  -DWITH_GHOST_X11=OFF \
+  -DWITH_GHOST_WAYLAND=OFF \
+  -DWITH_HEADLESS=OFF
 
       - name: Build Blender APK
         run: |
