--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -22,7 +22,7 @@ jobs:
           sudo apt update
           sudo apt install -y ninja-build cmake git wget unzip \
             libxi-dev libsdl2-dev libfreetype6-dev libx11-dev \
-            libopenal-dev build-essential
+            libopenal-dev build-essential libjpeg-dev
 
       - name: Download Android NDK r25c
         run: |
