Update blenderapp .yml

--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -8,8 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build Blender APK (Modeling Only)
-
     permissions:
       contents: read
 
@@ -20,9 +18,9 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt update
-          sudo apt install -y ninja-build cmake git wget unzip \
-            libxi-dev libsdl2-dev libfreetype6-dev libx11-dev \
-            libopenal-dev build-essential libjpeg-dev
+          sudo apt install -y cmake ninja-build git wget unzip build-essential \
+            python3-dev python3-pip libsdl2-dev libxi-dev libfreetype6-dev \
+            libopenal-dev libx11-dev libjpeg-dev libpng-dev zlib1g-dev
 
       - name: Download Android NDK r25c
         run: |
@@ -30,10 +28,17 @@ jobs:
           unzip android-ndk-r25c-linux.zip
           mv android-ndk-r25c $HOME/android-ndk
 
+      - name: Clone Blender Source
+        run: |
+          git clone https://github.com/blender/blender.git blender-source
+          cd blender-source
+          git checkout blender-v3.6-release
+
       - name: Configure Blender for Modeling Only
         run: |
-          mkdir build && cd build
-          cmake ../ \
+          mkdir build
+          cd build
+          cmake ../blender-source \
             -G Ninja \
             -DCMAKE_TOOLCHAIN_FILE=$HOME/android-ndk/build/cmake/android.toolchain.cmake \
             -DANDROID_ABI=arm64-v8a \
@@ -49,6 +54,7 @@ jobs:
             -DWITH_GEOMETRY_NODES=ON \
             -DWITH_IMAGE_EDITOR=ON \
             -DWITH_UV=ON \
+            -DWITH_SDL=ON \
             -DWITH_SCULPT=OFF \
             -DWITH_SIMULATION=OFF \
             -DWITH_COMPOSITOR=OFF \
@@ -67,4 +73,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: blender-modeling-apk
-          path: build/bin/
+          path: build/bin/*.apk
