--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -2,17 +2,13 @@ name: Build Blender Android APK (Modeling Only)
 
 on:
   workflow_dispatch:
-  push:
-    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout this repository
         uses: actions/checkout@v4
 
       - name: Install Dependencies
@@ -20,7 +16,19 @@ jobs:
           sudo apt update
           sudo apt install -y cmake ninja-build git wget unzip build-essential \
             python3-dev python3-pip libsdl2-dev libxi-dev libfreetype6-dev \
-            libopenal-dev libx11-dev libjpeg-dev libpng-dev zlib1g-dev
+            libopenal-dev libx11-dev libjpeg-dev libpng-dev zlib1g-dev \
+            git-lfs
+
+      - name: Configure Git LFS to Avoid Sculpt Assets
+        run: |
+          git lfs install --skip-smudge
+
+      - name: Clone Blender Source (modeling only)
+        run: |
+          git clone https://github.com/blender/blender.git blender-source
+          cd blender-source
+          git checkout blender-v3.6-release
+          git lfs pull --exclude="assets/brushes/essentials_brushes-curve_sculpt.blend"
 
       - name: Download Android NDK r25c
         run: |
@@ -28,13 +36,7 @@ jobs:
           unzip android-ndk-r25c-linux.zip
           mv android-ndk-r25c $HOME/android-ndk
 
-      - name: Clone Blender Source
-        run: |
-          git clone https://github.com/blender/blender.git blender-source
-          cd blender-source
-          git checkout blender-v3.6-release
-
-      - name: Configure Blender for Modeling Only
+      - name: Configure Blender for Modeling-Only Android APK
         run: |
           mkdir build
           cd build
@@ -44,7 +46,6 @@ jobs:
             -DANDROID_ABI=arm64-v8a \
             -DANDROID_PLATFORM=android-24 \
             -DCMAKE_BUILD_TYPE=Release \
-            -DWITH_SDL=ON \
             -DWITH_PYTHON_INSTALL=OFF \
             -DWITH_PYTHON_MODULE=OFF \
             -DWITH_PLAYER=OFF \
@@ -54,7 +55,6 @@ jobs:
             -DWITH_GEOMETRY_NODES=ON \
             -DWITH_IMAGE_EDITOR=ON \
             -DWITH_UV=ON \
-            -DWITH_SDL=ON \
             -DWITH_SCULPT=OFF \
             -DWITH_SIMULATION=OFF \
             -DWITH_COMPOSITOR=OFF \
@@ -62,14 +62,15 @@ jobs:
             -DWITH_GHOST_SDL=ON \
             -DWITH_GHOST_X11=OFF \
             -DWITH_GHOST_WAYLAND=OFF \
-            -DWITH_HEADLESS=OFF
+            -DWITH_HEADLESS=OFF \
+            -DWITH_SDL=ON
 
       - name: Build Blender APK
         run: |
           cd build
           ninja
 
-      - name: Upload Modeling APK Artifact
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: blender-modeling-apk
