Update blenderapp .yml

--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -1,4 +1,4 @@
-name: Build Blender Android APK (Modeling Only)
+name: Build Blender 3.6 APK (Modeling Only)
 
 on:
   workflow_dispatch:
@@ -8,26 +8,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout this repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y cmake ninja-build git wget unzip build-essential \
-            python3-dev python3-pip libsdl2-dev libxi-dev libfreetype6-dev \
-            libopenal-dev libx11-dev libjpeg-dev libpng-dev zlib1g-dev \
-            git-lfs
+          sudo apt-get update
+          sudo apt-get install -y \
+            git-lfs cmake ninja-build wget unzip build-essential \
+            python3-dev python3-pip \
+            libsdl2-dev libxi-dev libfreetype6-dev libopenal-dev \
+            libx11-dev libjpeg-dev libpng-dev zlib1g-dev
 
-      - name: Configure Git LFS to Avoid Sculpt Assets
+      - name: Configure Git LFS
         run: |
           git lfs install --skip-smudge
 
-      - name: Clone Blender Source (modeling only)
+      - name: Clone Blender source (v3.6 LTS)
         run: |
           git clone https://github.com/blender/blender.git blender-source
           cd blender-source
           git checkout blender-v3.6-release
+          git submodule update --init --recursive
           git lfs pull --exclude="assets/brushes/essentials_brushes-curve_sculpt.blend"
 
       - name: Download Android NDK r25c
@@ -36,19 +38,24 @@ jobs:
           unzip android-ndk-r25c-linux.zip
           mv android-ndk-r25c $HOME/android-ndk
 
-      - name: Configure Blender for Modeling-Only Android APK
+      - name: Configure Blender (Modeling APK)
         run: |
-          mkdir build
+          mkdir -p build
           cd build
           cmake ../blender-source \
             -G Ninja \
+            -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_TOOLCHAIN_FILE=$HOME/android-ndk/build/cmake/android.toolchain.cmake \
             -DANDROID_ABI=arm64-v8a \
             -DANDROID_PLATFORM=android-24 \
-            -DCMAKE_BUILD_TYPE=Release \
             -DWITH_PYTHON_INSTALL=OFF \
             -DWITH_PYTHON_MODULE=OFF \
             -DWITH_PLAYER=OFF \
+            -DWITH_SDL=ON \
+            -DWITH_GHOST_SDL=ON \
+            -DWITH_GHOST_X11=OFF \
+            -DWITH_GHOST_WAYLAND=OFF \
+            -DWITH_HEADLESS=OFF \
             -DWITH_CYCLES=ON \
             -DWITH_EEVEE=ON \
             -DWITH_MODIFIER=ON \
@@ -58,20 +65,15 @@ jobs:
             -DWITH_SCULPT=OFF \
             -DWITH_SIMULATION=OFF \
             -DWITH_COMPOSITOR=OFF \
-            -DWITH_VSE=OFF \
-            -DWITH_GHOST_SDL=ON \
-            -DWITH_GHOST_X11=OFF \
-            -DWITH_GHOST_WAYLAND=OFF \
-            -DWITH_HEADLESS=OFF \
-            -DWITH_SDL=ON
+            -DWITH_VSE=OFF
 
       - name: Build Blender APK
         run: |
           cd build
           ninja
 
-      - name: Upload APK Artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: blender-modeling-apk
+          name: blender-modeling-only-apk
           path: build/bin/*.apk
