Update blenderapp .yml

--- a/.github/workflows/blenderapp .yml
+++ b/.github/workflows/blenderapp .yml
@@ -21,8 +21,7 @@ jobs:
             libx11-dev libjpeg-dev libpng-dev zlib1g-dev
 
       - name: Configure Git LFS
-        run: |
-          git lfs install --skip-smudge
+        run: git lfs install --skip-smudge
 
       - name: Clone Blender source (v3.6 LTS)
         run: |
@@ -40,7 +39,7 @@ jobs:
 
       - name: Configure Blender (Modeling APK)
         run: |
-          mkdir -p build
+          mkdir build
           cd build
           cmake ../blender-source \
             -G Ninja \
@@ -70,7 +69,7 @@ jobs:
       - name: Build Blender APK
         run: |
           cd build
-          ninja
+          ninja blender
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
